<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.drjekyll.fontchooser.lafs</groupId>
  <artifactId>lafs</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>Font Chooser Look and Feel Tests</name>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.drjekyll</groupId>
      <artifactId>fontchooser</artifactId>
      <version>3.0.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>com.github.weisj</groupId>
      <artifactId>darklaf-core</artifactId>
      <version>3.0.1</version>
    </dependency>
    <dependency>
      <groupId>com.jtattoo</groupId>
      <artifactId>JTattoo</artifactId>
      <version>1.6.13</version>
    </dependency>
    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf</artifactId>
      <version>2.4</version>
    </dependency>
  </dependencies>

</project>
